Fix alignment on bottom-left footer

--- a/styles/main.css
+++ b/styles/main.css
@@ -108,7 +108,7 @@ a {
     font-size: 15px;
 }
 #top-footer {
-    padding: 0 25px;
+    padding: 0 20px;
     border-top: 1px solid #e4e4e4;
     border-bottom: 1px solid #e4e4e4;
 }
@@ -118,9 +118,10 @@ a {
     color: rgba(0,0,0,.54);
 }
 #bottom-footer {
-    padding: 0 25px;
+    padding: 0 18px;
     display: flex;
     justify-content: space-between;
+    font-size: 14px;
 }
 .bottom-footer-container {    
     padding: 0;
@@ -133,5 +134,5 @@ a {
 }
 .bottom-link {
     display: inline;
-    padding: 10px;
+    padding: 12px;
 }
